--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^2.1.0
   http: ^0.13.5
+  intl: ^0.18.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
