--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/android_foreground.png" # 임시 기본값 (Android에서 무시됨)
+  image_path_ios: "assets/icon/ios_app_store.png" # iOS 전용 아이콘
+
+  adaptive_icon_background: "#F5F5F5"
+  adaptive_icon_foreground: "assets/icon/android_foreground.png"
 
 flutter:
   uses-material-design: true
